# baracs

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: bench.yml  ci.yml  coverage.yml  publish.yml
apps/trep/: Cargo.toml
apps/trep/src/: main.rs
apps/trep/tests/: cli.rs
crates/ccfg/: Cargo.toml  README.md
crates/ccfg/src/: lib.rs
crates/tiny-regex/: Cargo.toml  README.md  build.rs
crates/tiny-regex/benches/: regex.rs  vs_regex_lite.rs
crates/tiny-regex/src/: api.rs  bindings.rs  lib.rs  raw.rs
crates/tiny-regex/src/c_src/: re.c  re.h  re_memo.h
crates/tiny-regex/tests/: differential.rs
samples/crates/tiny-regex/zephyr/: CMakeLists.txt  Cargo.toml  prj.conf  tests.yaml
samples/crates/tiny-regex/zephyr/src/: lib.rs
